--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ np. urządzenia elektryczne. Od
 zawsze<br/> interesował mnie ten kierunek,<br/> dlatego włożę całą swoją energię
 i determinację, aby spełnić to mażenie.</ul>
 <p><u>Imię: Kacper B.</u></p>
-<img scr="cjnMxkDEFtTJQi3E8WKVZ1Le9tCqIFdA">
+<img scr="cjnMxkDEFtTJQi3E8WKVZ1Le9tCqIFdA.jpg">
 </div>
 <style>
     body {
