--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-<div class="center-text"><h1>CV</h1>
+<div class="center-text"><h1><span style="color:blue;">CV </span></h1>
 
 <div class="center-text">
 <u><h3>Umiejętności informatyczne:
