--- a/index.html
+++ b/index.html
@@ -8,21 +8,21 @@
 <div class="center-text"><h1><span style="color:blue;">CV </span></h1>
 
 <div class="center-text">
-<u><h3>Umiejętności informatyczne:
-</h3></U>
+<u><h3><span style="color:red;">Umiejętności informatyczne:
+</span></h3></U>
 <ul>
 Podczas edukacji w szkole podstawowej nabyłem umiejętności jak posługiwać 
 się programem<br/> Tincercard (włacznie z praktycznym drukowaniem drukarką 3D),
 DroneBlocks,<br/> (mobilna aplikacjia do ustalania trasy lotu drona)
 Gimp i oczywiście opanowałem Scratcha.</ul></li>
 <hr>
-<u><h3>Czego bym chciał się nauczyć:</h3></U>
+<u><h3><span style="color:green;">Czego bym chciał się nauczyć:</span></h3></U>
     <ul>
     Bardzo chętnie nauczę się posługiwać programami t.j. python, java.<br/> Chciałbym również
 zapoznać się z aplikacjią, służącą do obrabiania 
 <br/>zdjęć oraz video . Ciekawi mnie również informatyka techniczna<br/> (elektryka, budowa komputera itp.)</ul>
 <hr>
-<u><b><h3>Plany na przyszłość:</h3></b></U>
+<u><b><h3><span style="color:rainbow;">Plany na przyszłość:</span></h3></b></U>
     <ul>
     Moją przyszłość chciałbym powiażać z inżynierią i informatyką,<br/> najchętniej konstruować 
 np. urządzenia elektryczne. Od
