--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ Gimp i oczywiście opanowałem Scratcha.</ul></li>
 zapoznać się z aplikacjią, służącą do obrabiania 
 <br/>zdjęć oraz video . Ciekawi mnie również informatyka techniczna<br/> (elektryka, budowa komputera itp.)</ul>
 <hr>
-<u><b><h3><span style="color:rainbow;">Plany na przyszłość:</span></h3></b></U>
+<u><b><h3><span style="color:random;">Plany na przyszłość:</span></h3></b></U>
     <ul>
     Moją przyszłość chciałbym powiażać z inżynierią i informatyką,<br/> najchętniej konstruować 
 np. urządzenia elektryczne. Od
