--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@ width="650">
 url("Bianco-Carrara-marmur-2-1.jpg");
         background-size: cover;
     }
+    <hr>
+    <a href="https://docs.google.com/document/d/1NIk0J0qEOD30jUxDsS7-HPMylUwjUzc7NOUTTPrYV9s/edit">jakis link</a>
+
 </style>
 </body>
 </html>
