--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ Gimp i oczywiście opanowałem Scratcha.</ul></li>
 zapoznać się z aplikacjią, służącą do obrabiania 
 <br/>zdjęć oraz video . Ciekawi mnie również informatyka techniczna<br/> (elektryka, budowa komputera itp.)</ul>
 <hr>
-<u><b><h3><span style="color:yellow;">Plany na przyszłość:</span></h3></b></U>
+<u><b><h3><span style="color:red;">Plany na przyszłość:</span></h3></b></U>
     <ul>
     Moją przyszłość chciałbym powiażać z inżynierią i informatyką,<br/> najchętniej konstruować 
 np. urządzenia elektryczne. Od
@@ -38,8 +38,8 @@ width="650">
 url("Bianco-Carrara-marmur-2-1.jpg");
         background-size: cover;
     }
-    <hr>
-    <a href="https://docs.google.com/document/d/1NIk0J0qEOD30jUxDsS7-HPMylUwjUzc7NOUTTPrYV9s/edit">jakis link</a>
+   
+    <a href="https://docs.google.com/document/d/1NIk0J0qEOD30jUxDsS7-HPMylUwjUzc7NOUTTPrYV9s/edit">jakis link</a></br>
 
 </style>
 </body>
