--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ zawsze<br/> interesował mnie ten kierunek,<br/> dlatego włożę całą swoją 
 i determinację, aby spełnić to mażenie.</ul>
 <p><u>Imię: Kacper B.</u></p>
     <ul>
-<a href="https://docs.google.com/document/d/1NIk0J0qEOD30jUxDsS7-HPMylUwjUzc7NOUTTPrYV9s/edit">jakis link</a></br>
+<h3><a href="https://docs.google.com/document/d/1NIk0J0qEOD30jUxDsS7-HPMylUwjUzc7NOUTTPrYV9s/edit">jakis link</a></br></h3>
     </ul>
     <<img src="cjnMxkDEFtTJQi3E8WKVZ1Le9tCqIFdA.jpg"
 width="650">
