--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <div class="center-text"><h1><span style="color:blue;">CV </span></h1>
 
 <div class="center-text">
-<u><h3><span style="color:red;">Umiejętności informatyczne:
+<u><h3><span style="color:pink;">Umiejętności informatyczne:
 </span></h3></U>
 <ul>
 Podczas edukacji w szkole podstawowej nabyłem umiejętności jak posługiwać 
