--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ i determinację, aby spełnić to mażenie.</ul>
 <p><u>Imię: Kacper B.</u></p>
     <ul>
 <p style="text-align:center;"><a href="https://docs.google.com/document/d/1NIk0J0qEOD30jUxDsS7-HPMylUwjUzc7NOUTTPrYV9s/edit">jakis link</a></br></ul></p>
-    
+    <div
     <<img src="cjnMxkDEFtTJQi3E8WKVZ1Le9tCqIFdA.jpg"
 width="650">
 </div>
