--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@ i determinację, aby spełnić to mażenie.</ul>
     <<img src="cjnMxkDEFtTJQi3E8WKVZ1Le9tCqIFdA.jpg"
 width="650">
 </div>
-    
+   <div class="img-kciuk"></div>
+   </div> 
 <style>
     body {
         background-image: 
 url("Bianco-Carrara-marmur-2-1.jpg");
         background-size: cover;
     }
-   
    
 
 </style>
