--- a/index.html
+++ b/index.html
@@ -1,53 +1,47 @@
 <!DOCTYPE html>
+<html lang="pl">
 <head>
     <link rel="stylesheet" href="style.css">
-    
 </head>
-
 <body>
-<div class="center-text"><h1><span style="color:blue;">CV </span></h1>
-
 <div class="center-text">
-<u><h3><span style="color:;">Umiejętności informatyczne:
-</span></h3></U>
-<ul>
-Podczas edukacji w szkole podstawowej nabyłem umiejętności jak posługiwać 
-się programem<br/> Tincercard (włacznie z praktycznym drukowaniem drukarką 3D),
-DroneBlocks,<br/> (mobilna aplikacjia do ustalania trasy lotu drona)
-Gimp i oczywiście opanowałem Scratcha.</ul></li>
-<hr>
-<u><h3><span style="color:green;">Czego bym chciał się nauczyć:</span></h3></U>
-    <ul>
-    Bardzo chętnie nauczę się posługiwać programami t.j. python, java.<br/> Chciałbym również
-zapoznać się z aplikacjią, służącą do obrabiania 
-<br/>zdjęć oraz video . Ciekawi mnie również informatyka techniczna<br/> (elektryka, budowa komputera itp.)</ul>
-<hr>
-<u><b><h3><span style="color:red;">Plany na przyszłość:</span></h3></b></U>
-    <ul>
-    Moją przyszłość chciałbym powiażać z inżynierią i informatyką,<br/> najchętniej konstruować 
-np. urządzenia elektryczne. Od
-zawsze<br/> interesował mnie ten kierunek,<br/> dlatego włożę całą swoją energię
-i determinację, aby spełnić to mażenie.</ul>
-<p><u>Imię: Kacper B.</u></p>
-    <ul>
-<p style="text-align:center;"><a href="https://docs.google.com/document/d/1NIk0J0qEOD30jUxDsS7-HPMylUwjUzc7NOUTTPrYV9s/edit">jakis link</a></br></ul></p>
-  <div
-    <img src="cjnMxkDEFtTJQi3E8WKVZ1Le9tCqIFdA.jpg"
-width="650">
+    <h1><span style="color: blue;">CV</span></h1>
+    <div class="center-text">
+        <u><h3><span style="color:;">Umiejętności informatyczne:</span></h3></u>
+        <ul>
+            Podczas edukacji w szkole podstawowej nabyłem umiejętności jak posługiwać 
+            się programem<br/> Tincercard (włacznie z praktycznym drukowaniem drukarką 3D),
+            DroneBlocks,<br/> (mobilna aplikacja do ustalania trasy lotu drona)
+            Gimp i oczywiście opanowałem Scratcha.
+        </ul>
+        <hr>
+        <u><h3><span style="color:green;">Czego bym chciał się nauczyć:</span></h3></u>
+        <ul>
+            Bardzo chętnie nauczę się posługiwać programami t.j. python, java.<br/> Chciałbym również
+            zapoznać się z aplikacją, służącą do obrabiania 
+            <br/>zdjęć oraz video . Ciekawi mnie również informatyka techniczna<br/> (elektryka, budowa komputera itp.)
+        </ul>
+        <hr>
+        <u><b><h3><span style="color:red;">Plany na przyszłość:</span></h3></b></u>
+        <ul>
+            Moją przyszłość chciałbym powiazać z inżynierią i informatyką,<br/> najchętniej konstruować 
+            np. urządzenia elektryczne. Od zawsze<br/> interesował mnie ten kierunek,<br/> dlatego włożę całą swoją energię
+            i determinację, aby spełnić to marzenie.
+        </ul>
+        <p><u>Imię: Kacper B.</u></p>
+        <ul>
+            <p style="text-align:center;"><a href="https://docs.google.com/document/d/1NIk0J0qEOD30jUxDsS7-HPMylUwjUzc7NOUTTPrYV9s/edit">jakis link</a></br></ul></p>
+        <div>
+            <img src="cjnMxkDEFtTJQi3E8WKVZ1Le9tCqIFdA.jpg" width="650">
+        </div>
+    </div>
+    <div class="img-kciuk"></div>
+    <style>
+        body {
+            background-image: url("Bianco-Carrara-marmur-2-1.jpg");
+            background-size: cover;
+        }
+    </style>
 </div>
-</div> 
-
-     <div class="img-kciuk"></div>
-<style>
-    body {
-        background-image: 
-url("Bianco-Carrara-marmur-2-1.jpg");
-        background-size: cover;
-    }
-   
-  
-   
-
-</style>
 </body>
 </html>
