--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </ul>
         <p><u>Imię: Kacper B.</u></p>
         <ul>
-            <p style="text-align:center;"><a href="https://docs.google.com/document/d/1NIk0J0qEOD30jUxDsS7-HPMylUwjUzc7NOUTTPrYV9s/edit">jakis link</a></br></ul></p>
+            <p style="text-align:center;"><a href="https://docs.google.com/document/d/1NIk0J0qEOD30jUxDsS7-HPMylUwjUzc7NOUTTPrYV9s/edit">jakis link</a></p></br></ul>
         <div>
             <img src="cjnMxkDEFtTJQi3E8WKVZ1Le9tCqIFdA.jpg" width="650">
         </div>
