--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         </div>
     </div>
     <div class="img-kciuk"></div>
+     <img src="kciuk.png" alt="Obraz kciuk" class="moving-image">
     <style>
         body {
             background-image: url("Bianco-Carrara-marmur-2-1.jpg");
