--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 <div class="center-text">
     <h1><span style="color: blue;">CV</span></h1>
     <div class="center-text">
+
+ <img src="cjnMxkDEFtTJQi3E8WKVZ1Le9tCqIFdA.jpg" class="Obrazek">
+
+        
         <u><h3><span style="color:;">Umiejętności informatyczne:</span></h3></u>
         <ul>
             Podczas edukacji w szkole podstawowej nabyłem umiejętności jak posługiwać 
@@ -32,7 +36,7 @@
         <ul>
             <p style="text-align:center;"><a href="https://docs.google.com/document/d/1NIk0J0qEOD30jUxDsS7-HPMylUwjUzc7NOUTTPrYV9s/edit">jakis link</a></p></br></ul>
         <div>
-            <img src="cjnMxkDEFtTJQi3E8WKVZ1Le9tCqIFdA.jpg" width="650">
+           
         </div>
     </div>
     <div class="img-kciuk"></div>
