--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </ul>
         <p><u>Imię: Kacper B.</u></p>
         <ul>
-            <p style="text-align:center;"><a href="https://docs.google.com/document/d/1NIk0J0qEOD30jUxDsS7-HPMylUwjUzc7NOUTTPrYV9s/edit">jakis link</a></p></br></ul>
+            <p style="text-align:center;"><a href="https://docs.google.com/document/d/1NIk0J0qEOD30jUxDsS7-HPMylUwjUzc7NOUTTPrYV9s/edit">Przydatna strona</a></p></br></ul>
         <div>
            
         </div>
