--- a/index.html
+++ b/index.html
@@ -13,24 +13,30 @@
         
         <u><h3><span style="color:;">Umiejętności informatyczne:</span></h3></u>
         <ul>
+            <div style="padding-left: 50px;">
             Podczas edukacji w szkole podstawowej nabyłem umiejętności jak posługiwać 
             się programem<br/> Tincercard (włacznie z praktycznym drukowaniem drukarką 3D),
             DroneBlocks,<br/> (mobilna aplikacja do ustalania trasy lotu drona)
             Gimp i oczywiście opanowałem Scratcha.
+            </div>
         </ul>
         <hr>
         <u><h3><span style="color:green;">Czego bym chciał się nauczyć:</span></h3></u>
         <ul>
+             <div style="padding-left: 50px;">
             Bardzo chętnie nauczę się posługiwać programami t.j. python, java.<br/> Chciałbym również
             zapoznać się z aplikacją, służącą do obrabiania 
             <br/>zdjęć oraz video . Ciekawi mnie również informatyka techniczna<br/> (elektryka, budowa komputera itp.)
+             </div>
         </ul>
         <hr>
         <u><b><h3><span style="color:red;">Plany na przyszłość:</span></h3></b></u>
         <ul>
+             <div style="padding-left: 50px;">
             Moją przyszłość chciałbym powiazać z inżynierią i informatyką,<br/> najchętniej konstruować 
             np. urządzenia elektryczne. Od zawsze<br/> interesował mnie ten kierunek,<br/> dlatego włożę całą swoją energię
             i determinację, aby spełnić to marzenie.
+             </div>
         </ul>
         <p><u>Imię: Kacper B.</u></p>
         <ul>
