--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         
         <u><h3><span style="color:;">Umiejętności informatyczne:</span></h3></u>
         <ul>
-            <div style="padding-right: 150px;">
+            <div style="text-align: left;">
             Podczas edukacji w szkole podstawowej nabyłem umiejętności jak posługiwać 
             się programem<br/> Tincercard (włacznie z praktycznym drukowaniem drukarką 3D),
             DroneBlocks,<br/> (mobilna aplikacja do ustalania trasy lotu drona)
@@ -23,7 +23,7 @@
         <hr>
         <u><h3><span style="color:green;">Czego bym chciał się nauczyć:</span></h3></u>
         <ul>
-             <div style="padding-right: 150px;">
+             <div style="text-align: left;">
             Bardzo chętnie nauczę się posługiwać programami t.j. python, java.<br/> Chciałbym również
             zapoznać się z aplikacją, służącą do obrabiania 
             <br/>zdjęć oraz video . Ciekawi mnie również informatyka techniczna<br/> (elektryka, budowa komputera itp.)
@@ -32,7 +32,7 @@
         <hr>
         <u><b><h3><span style="color:red;">Plany na przyszłość:</span></h3></b></u>
         <ul>
-             <div style="padding-right: 150px;">
+              <div style="text-align: left;">
             Moją przyszłość chciałbym powiazać z inżynierią i informatyką,<br/> najchętniej konstruować 
             np. urządzenia elektryczne. Od zawsze<br/> interesował mnie ten kierunek,<br/> dlatego włożę całą swoją energię
             i determinację, aby spełnić to marzenie.
