--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
 
   <script>
     // 2. Podmień tutaj ścieżki do swoich plików
-    const STATIC_IMG    = 'obrazek.png';
-    const ONE_TIME_GIF  = 'pierwszy.gif';
-    const LOOP_GIF      = 'drugi.gif';
+    const STATIC_IMG    = 'Bomba.png';
+    const ONE_TIME_GIF  = 'eksplozja.gif';
+    const LOOP_GIF      = 'cat-vibing.gif';
 
     // 3. Podaj ręcznie czas trwania pierwszego GIF-a (w ms)
     //    Zmierz go np. w edytorze GIF lub na stronie online, sumując czasy klatek.
-    const DURATION_MS = 2500; 
+    const DURATION_MS = 1000; 
 
     const imgEl = document.getElementById('anim');
 
@@ -85,11 +85,6 @@
 
     imgEl.addEventListener('click', handleClick);
   </script>
-
-
-
-
-
             
             <p style="text-align:center;"><a href="https://docs.google.com/document/d/1NIk0J0qEOD30jUxDsS7-HPMylUwjUzc7NOUTTPrYV9s/edit">Przydatna strona</a></p></br></ul>
         <div>
@@ -109,5 +104,6 @@
  </div>
 </body>
 </html>
+
 
 
