--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </head>
 <body>
 
-  <!-- 1. Początkowy obrazek -->
+  <!-- 1. Początkowy obrazek 
   <img
     id="anim"
     src="obrazek.png"
@@ -105,5 +105,6 @@
  </div>
 </body>
 </html>
+
 
 
