--- a/index.html
+++ b/index.html
@@ -48,6 +48,21 @@
     #anim {
       cursor: pointer;
     }
+
+  <meta charset="UTF-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <script src="program.js"></script>
+</head>
+<body>
+   <h1>Kalkulator</h1>
+
+   <p><input id="f1"> + <input id="f2"> = <span id="wynik"></span></p>
+  
+   <button onclick="wyczysc()">Wyczyść</button> 
+   <button onclick="dodaj()">Oblicz</button>
+
+      
   </style>
 </head>
 <body>
@@ -105,6 +120,7 @@
  </div>
 </body>
 </html>
+
 
 
 
