--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
   
    <button onclick="wyczysc()">Wyczyść</button> 
    <button onclick="dodaj()">Oblicz</button>
-
+</style>
+        </head>
+            <body>
 
 
   <!-- 1. Początkowy obrazek 
@@ -117,6 +119,7 @@
  </div>
 </body>
 </html>
+
 
 
 
