--- a/index.html
+++ b/index.html
@@ -49,29 +49,25 @@
       cursor: pointer;
     }
 
-  <meta charset="UTF-8">
+     <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <script src="program.js"></script>
+   <script src="program.js" defer></script>
 </head>
 <body>
    <h1>Kalkulator</h1>
-<p>
-    <input id="f1" type="text" inputmode="decimal" placeholder="liczba 1">
-    +
-    <input id="f2" type="text" inputmode="decimal" placeholder="liczba 2">
-    =
-    <span id="wynik"></span>
-  </p>
+   <p>
+      <input id="f1" type="text" inputmode="decimal" placeholder="liczba 1">
+      +
+      <input id="f2" type="text" inputmode="decimal" placeholder="liczba 2">
+      =
+      <span id="wynik"></span>
+   </p>
 
-  <button id="clearBtn">Wyczyść</button>
-  <button id="calcBtn">Oblicz</button>
-
-  <script src="program.js"></script>
-</style>
-        </head>
-            <body>
-
+   <button id="clearBtn">Wyczyść</button>
+   <button id="calcBtn">Oblicz</button>
+</body>
+</html>
 
   <!-- 1. Początkowy obrazek 
   <img
@@ -126,6 +122,7 @@
  </div>
 </body>
 </html>
+
 
 
 
